network/default-network-policy.yml
---
#Сначала запретим всё.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-policy
  namespace: kuber-14-5
spec:
  podSelector: {}
  ingress: []   
  egress: [] 

---
#Теперь разрешим траффик приложению front. И входящий, и исходящий.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-internet-only
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0  #Можно во все сети, при этом траффик будет ходить и между подами
  - to:      #Это чтобы DNS работал, а то первая политика всё запрещает.      
    ports:            
    - protocol: UDP   
      port: 53        
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0  #Разрешим и входящий траффик тоже
  - ports:
    - port: 80
    - port: 443
